# BenchMark

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
analytics/: apps.py  consumers.py  models.py  signals.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_rename_current_value_analytics_value_and_more.py  0003_alter_analytics_value.py  0004_analytics_user.py  0005_analytics_item_name.py
exerciselogging/: apps.py  forms.py  models.py  urls.py  views.py
exerciselogging/migrations/: 0001_initial.py  0002_userloggedexercise_target_muscles.py
exerciserepo/: apps.py  models.py
exerciserepo/migrations/: 0001_initial.py
finalproject/: asgi.py  routing.py  settings.py  urls.py
foodlogging/: apps.py  forms.py  models.py  urls.py  views.py
foodlogging/migrations/: 0001_initial.py  0002_alter_userloggedfood_carbohydrates_and_more.py  0003_userloggedfood_user.py  0004_alter_userloggedfood_food_logged_at.py  0005_userloggedfood_sugar.py
foodrepo/: apps.py  models.py  views.py
foodrepo/migrations/: 0001_initial.py  0002_foodentry_sugars.py  0003_rename_cholestorol_foodentry_cholesterol_and_more.py  0004_rename_sugars_foodentry_sugar.py
homepage/: forms.py  urls.py  views.py
macrosAI/: apps.py  views.py
trajectories/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
trajectories/migrations/: 0001_initial.py  0002_trajectory_delete_question.py  0003_trajectory_projected_point_trajectory_timestamps.py  0005_alter_trajectory_start_date_and_more.py  (+3 more)
user/: forms.py  models.py  urls.py  views.py
(+40 files in other folders)
